# Translation-Gummy

./: .gitignore  Colaboratory.ipynb  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  issue_bug_report.md  issue_feature_request.md
.github/workflows/: execute_python_package.yml  python-package.yml  upload_python_package.yml
.github/workflows-bin/: setup-chromedriver.sh
aws/: .gitignore
aws/ec2/: uwsgi.ini
docker/: Dockerfile  Makefile  README.md  docker-compose.yml
docker/fonts/: .gitignore
docs/: .buildinfo  genindex.html  gummy.cli.html  gummy.gateways.html  gummy.html  gummy.journals.html  gummy.models.html  gummy.translators.html  gummy.utils.coloring_utils.html  gummy.utils.compress_utils.html  gummy.utils.download_utils.html  gummy.utils.driver_utils.html  gummy.utils.environ_utils.html  gummy.utils.generic_utils.html  gummy.utils.html  gummy.utils.journal_utils.html  gummy.utils.monitor_utils.html  gummy.utils.outfmt_utils.html  gummy.utils.pdf_utils.html  gummy.utils.soup_utils.html  gummy.utils.templates.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: abc.html  index.html
docs/_sources/: gummy.cli.rst.txt  gummy.gateways.rst.txt  gummy.journals.rst.txt  gummy.models.rst.txt  gummy.rst.txt  gummy.translators.rst.txt  gummy.utils.coloring_utils.rst.txt  gummy.utils.compress_utils.rst.txt  gummy.utils.download_utils.rst.txt  gummy.utils.driver_utils.rst.txt  gummy.utils.environ_utils.rst.txt  gummy.utils.generic_utils.rst.txt  gummy.utils.journal_utils.rst.txt  gummy.utils.monitor_utils.rst.txt  gummy.utils.outfmt_utils.rst.txt  gummy.utils.pdf_utils.rst.txt  gummy.utils.rst.txt  gummy.utils.soup_utils.rst.txt  gummy.utils.templates.rst.txt  index.rst.txt  modules.rst.txt
docs/_static/: custom.css  custom.js
examples/: Colaboratory.ipynb  Create.PDF.through.gateway.ipynb  Create.PDF.without.gateway.ipynb  Create.a.templates.ipynb  Generate.a.PDF.through.gateway.ipynb  Make.a.new.JournalCrawler.soup.ipynb  Make.a.new.URL.conversion.method.ipynb  Make.a.new._pass2journal.ipynb  README.md  Use.Translation-Gummy.via.Docker.ipynb  docker.ipynb
gummy/: .env  __init__.py  cli.py  deepl.py  gateways.py  journal.py  journals.py  main.py  models.py  render.py  translation.py  translators.py
gummy/cli/: check_driver.py  translate_journal.py  translate_text.py
gummy/templates/: TEMPLATES_TEMPLATE.tpl  base.html  header.html  paper.html  paper.tpl  style.css  style.html  style.less
gummy/utils/: __init__.py  _data.py  _exceptions.py  _path.py  _type.py  _warnings.py  coloring_utils.py  compress_utils.py  download_utils.py  driver_utils.py  environ_utils.py  gateway_utils.py  generic_utils.py  journal_utils.py  monitor_utils.py  outfmt_utils.py  pdf_utils.py  soup_utils.py  templates.py  zip_utils.py
tests/: README.md  _generate_all_templates.py  conftest.py  data.py  sentences.py  test_fixture_sentences.py  test_gateways.py  test_journals.py  test_main.py  test_models.py  test_translation.py  test_translators.py  test_utils.py
(+30 files in other folders)
