[tool.poetry]
name = "Translation-Gummy"
version = "4.0.1"
description = "Translation Gummy is a magical gadget which enables user to be able to speak and understand other languages."
authors = ["iwasakishuto <cabernet.rock@gmail.com>"]
license = "MIT"
repository = "https://github.com/iwasakishuto/Translation-Gummy"
homepage = "https://iwasakishuto.github.io/Translation-Gummy/index.html"
readme = "README.md"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    {include = "gummy"}
]

[tool.poetry.urls]
"Documentation" = "https://iwasakishuto.github.io/Translation-Gummy/index.html"
"Bug Reports" = "https://github.com/iwasakishuto/Translation-Gummy/issues"
"Source Code" = "https://github.com/iwasakishuto/Translation-Gummy"
"Say Thanks!" = "https://twitter.com/cabernet_rock"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11.1"
html5lib = "^1.1"
Jinja2 = "^3.1.1"
lxml = "^4.6.3"
nltk = "^3.6.2"
pdfkit = "^0.6.1"
pdfminer = "^20191125"
pylatexenc = "^2.10"
python-dotenv = "^0.17.1"
python-magic = "^0.4.22"
MarkupSafe = "^2.0.1"
requests = "^2.27.1"
selenium = "^4.1.3"
Werkzeug = "^1.0.1"
PyPDF2 = "^1.27.3"
undetected-chromedriver = "^3.1.5"

[tool.poetry.extras]
windows = ["python-magic-bin"]

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.812"
pytest = "^6.2.4"
ipykernel = "^6.12.1"
pytest-github-actions-annotate-failures = "^0.1.6"

[tool.poetry.scripts]
gummy-journal = "gummy.cli.translate_journal:translate_journal"
gummy-translate = "gummy.cli.translate_text:translate_text"
gummy-driver = "gummy.cli.check_driver:check_driver"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
